# pyQSS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py  test_cibuildwheel.py  test_local_build.py
.github/: SETUP.md
.github/workflows/: build-wheels.yml  ci.yml  code-quality.yml  release.yml
examples/: benchmark.py  combustion_example.py  qss_experiment.ipynb  simple_example.py
qss_integrator/: __init__.py  utils.py
qss_integrator/src/: mathUtils.h  qss_integrator.cpp  qss_integrator.h
scripts/: release.py
tests/: test_qss_integrator.py
